--- a/src/pages/Register/User/styles.css
+++ b/src/pages/Register/User/styles.css
@@ -1,67 +1,40 @@
+
 .register-container {
   width: 100%;
   max-width: 900px;
   height: 100vh;
   margin: 0 auto;
-
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.register-container .content {
+.content {
   width: 100%;
-  padding: 96px;
-  background: #fff;
-  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  border: solid 1px black;
+  padding:30px !important;
+  background-color: rgba(255,255,255,0.85) !important;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display:flex !important;
+  justify-content:space-evenly !important;;
 }
 
-.register-container .content section {
-  width: 100%;
-  max-width: 380px;
+.form_esquerda {
+  max-width:40%;
+  margin:0;
+}
+.form_esquerda img { 
+  max-width:70%;
+  margin-bottom: 2.5em;
+}
+.form_esquerda p { 
+  margin-top:14px;
+  color: #2a5f9e;
+  font-size: 1.1em;
+  line-height:24px;
 }
 
-.register-container .content section img {
-  max-height: 130px;
-}
-
-.register-container .content section h1 {
-  margin: 24px 0 32px;
-  font-size: 32px;
-}
-
-.register-container .content section p {
-  font-size: 18px;
-  color: #737380;
-  line-height: 32px;
-}
-
-.register-container .content form {
-  width: 100%;
-  max-width: 450px;
-}
-
-.register-container .content form input {
-  margin-top: 8px;
-}
-
-.register-container .content form .input-group {
-  display: flex;
-}
-
-.register-container .content form span {
-  color: #4A90E2;
-  align-self: flex-end;
-  margin: 20px;
-  font-weight: 500;
-}
-
-/* estiliza a partir do segundo input */
-.register-container .content form .input-group input + input {
-  margin-left: 8px;
+.form_direita {
+  max-width:40%;
+  margin:0;
 }
