--- a/src/pages/admin/Users/styles.css
+++ b/src/pages/admin/Users/styles.css
@@ -1,17 +1,18 @@
-body {
-  background-image: none;
+.page-container {
+  width: 100%;
+  max-width: 900px;
+  padding: 0;
+  margin: 32px auto;
 }
-.imgger {
-  max-width:200px;
-  margin: 3px;
-  border-radius: 8px;
-  border: solid 1px rgba(100,100,100,0.1);  
-  box-shadow: 0px 1px rgba(100,100,100,0.1);
-  text-decoration: none;
-  transition: transform 0.2s;
+
+.page-container header {
+  display: flex;
+  align-items: center;
 }
-.imgger:hover {
-  transform: translateY(-5px);
+
+.page-container header span {
+  font-size: 20px;
+  margin-left: 24px;
 }
 
 .page-container header img {
@@ -19,7 +20,7 @@ body {
 }
 
 .images-container {
-  padding: 0;
+  padding: 0 ;
   margin: 0;
 }
 
