--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,26 @@ button {
   cursor: pointer;
 }
 
+.page-container {
+  width: 100%;
+  max-width: 900px;
+  padding: 0;
+  margin: 32px auto;
+}
+.page-container h1 {
+  margin-bottom: 20px;
+}
+
+.page-container header {
+  align-items: center;
+}
+
+.page-container header span {
+  font-size: 20px;
+  margin-left: 24px;
+}
+
+
 form input {
   width: 100%;
   height: 60px;
@@ -102,34 +122,34 @@ form textarea {
   opacity: 0.8;
 }
 
-.tipy-toast-alert {
+.imgger-toast-alert {
   border: 1px solid #887029 !important;
   box-shadow: 0px 1px 5px rgba(248, 175, 175, 0.1) !important;
   border-radius: 8px !important;
   background: #ffd042 !important;
 }
-.tipy-toast-alert-body {
+.imgger-toast-alert-body {
   color: #3e3e3e;
   font-weight: bold;
   padding-left: 10px;
   -webkit-font-smoothing: antialiased;
 }
-.tipy-toast-alert-bar {
+.imgger-toast-alert-bar {
   background: #887029 !important;
 }
 
-.tipy-toast-success {
+.imgger-toast-success {
   border: 1px solid #319431 !important;
   box-shadow: 0px 1px 5px rgba(248, 175, 175, 0.1) !important;
   border-radius: 8px !important;
   background: #3ebb3e !important;
 }
-.tipy-toast-success-body {
+.imgger-toast-success-body {
   color: #ececec;
   font-weight: bold;
   padding-left: 10px;
   -webkit-font-smoothing: antialiased;
 }
-.tipy-toast-success-bar {
+.imgger-toast-success-bar {
   background: #319431 !important;
 }
