--- a/src/global.css
+++ b/src/global.css
@@ -13,6 +13,13 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.page-container {
+  width: 100%;
+  max-width: 900px;
+  padding: 0;
+  margin: 32px auto;
+}
+
 input,
 button,
 textarea {
@@ -24,24 +31,23 @@ button {
 }
 
 .page-container {
-  width: 100%;
-  max-width: 900px;
-  padding: 0;
-  margin: 32px auto;
+  width: 100% !important;
+  max-width: 840px !important;
+  margin: 32px auto !important;
+}
+.page-container .content {
+  padding: 50px;
+  border: solid 1px black;
+  background-color: rgba(255,255,255,0.85) !important;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
 }
 .page-container h1 {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  color: #4A90E2;
 }
-
-.page-container header {
-  align-items: center;
-}
-
-.page-container header span {
-  font-size: 20px;
-  margin-left: 24px;
-}
-
 
 form input {
   width: 100%;
