--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -1,27 +1,31 @@
 
 .register-container {
+  background-image: url(../../assets/background_1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
-  max-width: 900px;
   height: 100vh;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.content {
+.register-container .content {
   width: 100%;
+  max-width: 900px;
   border: solid 1px black;
-  padding:30px !important;
-  background-color: rgba(255,255,255,0.85) !important;
+  padding:40px;
+  background-color: rgba(255,255,255,0.85);
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
-  display:flex !important;
-  justify-content:space-evenly !important;;
+  display:flex;
+  justify-content:space-evenly;
 }
 
 .form_esquerda {
   max-width:40%;
-  margin:0;
+  margin:28px 0 0 ;
 }
 .form_esquerda img { 
   max-width:70%;
@@ -33,8 +37,10 @@
   font-size: 1.1em;
   line-height:24px;
 }
-
 .form_direita {
   max-width:40%;
   margin:0;
+}
+.form_direita input {
+  margin-bottom: 4px;
 }
