--- a/src/pages/admin/Users/styles.css
+++ b/src/pages/admin/Users/styles.css
@@ -1,102 +1,17 @@
-.page-container {
+
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
   width: 100%;
-  max-width: 900px;
-  padding: 0;
-  margin: 32px auto;
+  border: 1px solid #ddd;
 }
-
-.page-container header {
-  display: flex;
-  align-items: center;
+th {
+  background-color: #555;
+  color: #EEE
 }
-
-.page-container header span {
-  font-size: 20px;
-  margin-left: 24px;
+th, td {
+  text-align: left;
+  padding: 8px;
 }
-
-.page-container header img {
-  height: 64px;
-}
-
-.images-container {
-  padding: 0 ;
-  margin: 0;
-}
-
-.images-container h1 {
-  margin-top: 80px;
-  margin-bottom: 24px;
-}
-
-.images-container ul {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 8px;
-  list-style: none;
-}
-
-.images-container ul li {
-  background: #fff;
-  padding: 2px;
-  border-radius: 8px;
-  position: relative;
-}
-
-.images-container ul li button {
-  position: absolute;
-  right: 24px;
-  top: 24px;
-  border: 0;
-}
-
-.images-container ul li button:hover {
-  opacity: 0.8;
-}
-
-.images-container ul li strong {
-  display: block;
-  margin-bottom: 16px;
-  color: #41414d;
-}
-
-.images-container ul li p + strong {
-  margin-top: 32px;
-}
-
-.cards {
-  max-height: 90px;
-  outline: none;
-  margin-bottom:120px;
-  display: flex;
-  flex-wrap: wrap;
-}
-.cards img {
-  display: flex;
-  flex-direction: column;
-  background: #fff;
-  border-radius: 8px;
-  border: solid 1px rgba(100,100,100,0.1);  
-  max-width: 280px;
-  box-shadow: 0px 1px rgba(100,100,100,0.1);
-
-  text-decoration: none;
-  align-items: center;
-  
-  transition: transform 0.2s;
-  /* mesmo elemento hover */
-  margin-top: 10px;
-  margin-bottom: 8px;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-  width: 100%;
-  height: 140px;
-}
-
-.cards img:hover {
-  transform: translateY(-5px);
-}
-
-.cards p {
-  font-size: 12px;
-}
+tr:nth-child(even){background-color: #f2f2f2}
